--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -21,22 +21,31 @@
         </tr>
 
         {% for task in tasks %}
-            <tr>
-                <td>{{ task.content }}</td>
-                <td>{{ task.date_created.date() }}</td>
-                <td>
-                    <a href="/delete/{{task.id}}">Delete</a>
-                    <br>
-                    <a href=/update/{{task.id}}#">Update</a>
-                </td>
-            </tr>
+        <tr>
+            <td>{{ task.content }}</td>
+            <td>{{ task.date_created.date() }}</td>
+            <td>
+                <a href="/delete/{{task.id}}">Delete</a>
+                <br>
+                <a href=/update/{{task.id}}#">Update</a>
+            </td>
+        </tr>
         {% endfor %}
     </table>
     {% endif %}
 
-    <form action="/" method="POST">
-        <input type="text" name="content" id="content">
-        <input type="submit" value="Add Task">
-    </form>
+    <div class="task-form">
+        <form action="/" method="POST">
+            <label for="content" class="input-text">
+                <input type="text" id="content" name="content" placeholder="Play bass"
+                       minlength="1" pattern=".{1,}" required title="1 character minimum">
+                <span class="label"></span>
+                <span class="focus-bg"></span>
+            </label>
+
+            <button class="button">Add Task</button>
+        </form>
+    </div>
+
 </div>
 {% endblock %}
