--- a/application/templates/update.html
+++ b/application/templates/update.html
@@ -10,11 +10,18 @@
 <div class="content">
     <h1 style="text-align: center">Update TODOer Task</h1>
 
-    <div class="form">
-        <form action="/update/{{task.id}}" method="POST">
-        <input type="text" name="content" id="content" value="{{task.content}}">
-        <input type="submit" value="Update Task">
-    </form>
+    <div class="task-form">
+        <form action="/" method="POST">
+            <label for="content" class="input-text">
+                <input type="text" id="content" name="content" placeholder="Play bass"
+                       minlength="1" pattern=".{1,}" required title="1 character minimum">
+                <span class="label"></span>
+                <span class="focus-bg"></span>
+            </label>
+
+            <button class="button">Add Task</button>
+        </form>
     </div>
+
 </div>
 {% endblock %}
